          '--no-unknown', '--no-unchanged' and '--no-corresponding-renames'.
          Please consult the monotone documentation for more information about
          these new options.
          In addition, 'automate inventory' no longer recurses into ignored
          directories. The typical case of listing files that need attention
          now runs at least four times faster.

Wed Dec 12 21:21:15 UTC 2007

        0.38 release.

        Changes

        - mtn log now prints a single dot for a project's root
          directory instead of an empty string.

        - mtn now warns if changes to a file will be ignored because
          the file has been deleted on one side of a merge.

        - mtn now errors if your chosen private key doesn't match the public
          key of the same name in your database.

        - mtn now checks for your key before a merge action takes place to
          ensure that any manually merged file isn't lost in an error case

        Bugs fixed

        - a bug introduced in 0.37 prevented an external merger from being
          executed unless the MTN_MERGE environment variable was set

        - mtn read successfully reads revision data, and cert packets again

        - mtn consistently supports certs with empty values
          (fixed 'ls certs' and 'read')

        Internal

        - Update Botan to 1.7.2.

        - Moved the gzip implementation out of the Botan directory.

        Other

        - Added the scripts of the following Lua-based contributed
          Monotone extension commands to contrib/command/:
          "mtn base", "mtn fuse", "mtn revision", "mtn conflicts".

        - Added a hooks version of the contributed ciabot script,
          contrib/ciabot_monotone_hookversion.lua

        - The monotone manual is now licensed under the GPL rather than
          the GFDL.

Fri Oct 25 22:35:33 UTC 2007

        0.37 release.

        Changes

        - mtn db kill_rev_locally now checks for an existing workspace